--- a/main.css
+++ b/main.css
@@ -76,12 +76,12 @@
         font-size: 1.3vh !important;
     }
     .t-title-m {
-        font-size: 0.8vh !important;
+        font-size: 0.7vh !important;
         margin: 0.5vh 0 !important;
         font-weight: 300 !important;
     }
     .t-title-s {
-        font-size: 0.8vh !important;
+        font-size: 0.6vh !important;
     }
     .t-subtitle-l {
         font-size: 1.0vh !important;
@@ -141,6 +141,16 @@
         top: 48% !important;
         margin-left: -1.0vh !important;
         margin-right: -1.0vh !important;
+    }
+    .carousel-content {
+        height: 20vh !important;
+    }
+    .carousel {
+        height: 20vh !important;
+    }
+
+    .slide {
+        height: 200px !important;
     }
     .carouselContentGH {
         height: 100%;
@@ -207,7 +217,7 @@
         margin-left: 8px !important;
     }
     .body-h {
-        margin-bottom: 20vh !important;
+        margin-bottom: 0vh !important;
     }
     .body-intro {
         flex-direction: column !important;
@@ -248,14 +258,12 @@
         0px !important/* left&right*/
         ;
     }
-    .carousel {
-        height: 360px !important;
-    }
+
     #photos {
         width: 160px !important;
     }
     .nav {
-        margin-top: 60px !important;
+        margin-top: -20px !important;
         width: 15px !important;
         height: 15px !important;
     }
@@ -421,7 +429,10 @@ a:link.text-about-resume {
     width: 50%;
     height: auto;
 }
-
+.img {
+    width: 100%;
+    height: auto;
+}
 img {
     width: 100%;
     height: auto;
@@ -708,7 +719,8 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15vh;
+    margin-bottom: 20vh !important;
+
 }
 
 /* body-intro */
@@ -1197,9 +1209,7 @@ body {
     margin-left: 1%;
 }
 
-#carousel-project-img {
-    width: 70vh;
-}
+
 
 #rc {
     width: 300px;
@@ -1317,7 +1327,7 @@ animation-play-state: paused;
 .carousel {
     position: relative;
     width: 100%;
-    height: 680px;
+    height: 70vh;
     margin: 0 auto;
 }
 
