--- a/main.css
+++ b/main.css
@@ -148,7 +148,6 @@
     .carousel {
         height: 20vh !important;
     }
-
     .slide {
         height: 200px !important;
     }
@@ -258,7 +257,6 @@
         0px !important/* left&right*/
         ;
     }
-
     #photos {
         width: 160px !important;
     }
@@ -429,10 +427,12 @@ a:link.text-about-resume {
     width: 50%;
     height: auto;
 }
+
 .img {
     width: 100%;
     height: auto;
 }
+
 img {
     width: 100%;
     height: auto;
@@ -441,6 +441,7 @@ img {
 svg {
     width: 100%;
     height: auto;
+    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.1));
 }
 
 /* Hover */
@@ -503,6 +504,11 @@ hr {
 br {
     display: block;
     line-height: 1.5vw;
+}
+
+.blank-lineheight-xs {
+    display: block;
+    height: 0.8vw;
 }
 
 .blank-lineheight-s {
@@ -720,7 +726,6 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 20vh !important;
-
 }
 
 /* body-intro */
@@ -777,7 +782,6 @@ body {
 .center-v {
     display: flex;
     align-items: center;
-
 }
 
 .bg-square-interview {
@@ -831,7 +835,6 @@ body {
 }
 
 .color-grey:hover {
-    background-color: #F5F5F5;
     box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
 }
 
@@ -840,13 +843,28 @@ body {
     box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.016), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
 }
 
-.color-white {
-    background-color: #ffffff;
-    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
+.shadow1 {
+    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.016), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
 }
 
-.box-shadow-short {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.clip-shape-shadow {
+    filter: drop-shadow(20px 40px 25px rgba(124, 84, 10, 0.404));
+}
+
+.clip-shape {
+    clip-path: inset(0px round 15px);
+    width: 800px;
+    height: 1000px;
+}
+
+.color-white:hover {
+    filter: drop-shadow(6px 10px 15px rgb(0 0 0 / 0.1));
+    transition: transform 930ms ease-in-out;
+}
+
+.color-white {
+    background-color: #ffffff;
+    filter: drop-shadow(3px 5px 5px rgb(0 0 0 / 0.1));
 }
 
 .border-radius {
@@ -854,9 +872,8 @@ body {
 }
 
 .border-color-left {
-
-    border-left-style:  solid;
-    border-left-color:  #FED256;
+    border-left-style: solid;
+    border-left-color: #FED256;
     border-left-width: 5px;
 }
 
@@ -908,6 +925,10 @@ body {
 
 .width-l {
     width: 32vw;
+    margin: 4vw;
+}
+.width-ll {
+    width: 36vw;
     margin: 4vw;
 }
 
@@ -988,6 +1009,7 @@ body {
     120px;
     /* left&right*/
 }
+
 .vertical-line-s {
     border-left: 1px solid gray;
     height: 100px;
@@ -999,6 +1021,7 @@ body {
     height: 20vh;
     margin: 18vh 5vh;
 }
+
 .vertical-line-mp-s {
     border-left: 1px solid rgba(0, 0, 0, 0.23);
     height: 20vh;
@@ -1049,19 +1072,12 @@ body {
     width: 30%;
 }
 
-.body-margin {
+.margin-all {
     margin: 0px 4vw;
 }
-.margin {
-    margin: 2% 10%;
+.margin-none {
+    margin: 0;
 }
-.margin-0 {
-    margin: 2% 10%;
-}
-.margin-tb {
-    margin: 0 10vw;
-}
-
 .margin-l {
     margin: 20vw;
 }
@@ -1175,7 +1191,10 @@ body {
     margin: 0;
     height: 60vw;
 }
-
+.bg-color-mp-noheight1 {
+    background-color: #FED256;
+    margin: 0;
+}
 .bg-color-mp-noheight {
     background-color: #F5F5F5;
     margin: 0;
@@ -1208,8 +1227,6 @@ body {
     height: auto;
     margin-left: 1%;
 }
-
-
 
 #rc {
     width: 300px;
@@ -1345,6 +1362,18 @@ animation-play-state: paused;
     transition: left .4s cubic-bezier(.47, .13, .15, .89);
 }
 
+.nav-project {
+    position: absolute;
+    top: 50%;
+    margin-top: -80px;
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
 .nav {
     position: absolute;
     top: 50%;
@@ -1408,6 +1437,61 @@ animation-play-state: paused;
 }
 
 /* architecture */
+
+/* MP Carousel */
+
+.MPcarousel {
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.MPcarousel-content {
+    position: relative;
+    overflow: hidden;
+    transition: width .4s;
+    height: 100%;
+}
+
+.MPslide {
+    height: auto;
+    width: 20%;
+    position: absolute;
+    z-index: 1;
+    transition: left .4s cubic-bezier(.47, .13, .15, .89);
+    opacity: 0.5;
+}
+
+.centerElement {
+    opacity: 1;
+}
+
+.MPnav {
+    position: absolute;
+    top: 0;
+    margin-top: -10px;
+    width: 40%;
+    height: 90%;
+    z-index: 2;
+    cursor: pointer;
+    border-radius: 5%;
+    border: none;
+    outline: none;
+    color: white;
+    -webkit-user-select: none;
+}
+
+.MPnav-left {
+    left: -25px;
+}
+
+.MPnav-right {
+    right: -25px;
+}
+
+
+/* MP Carousel */
 
 /* Photography */
 
